hphp/hack/test/typecheck/class_level_where_clauses/this_as/protected_non_static_member_03.php.exp
File "protected_non_static_member_03.php", line 30, characters 12-13:
No instance method `me` in `T` (Typing[4053])
  File "protected_non_static_member_03.php", line 28, characters 19-21:
  Did you mean `foo` instead?
  File "protected_non_static_member_03.php", line 27, characters 7-7:
  This is why I think it is an object of type T
  File "protected_non_static_member_03.php", line 27, characters 7-7:
  Declaration of `T` is here
File "protected_non_static_member_03.php", line 36, characters 12-21:
No instance method `accessible` in `T2` (Typing[4053])
  File "protected_non_static_member_03.php", line 35, characters 19-21:
  Did you mean `foo` instead?
  File "protected_non_static_member_03.php", line 34, characters 7-8:
  This is why I think it is an object of type T2
  File "protected_non_static_member_03.php", line 34, characters 7-8:
  Declaration of `T2` is here
File "protected_non_static_member_03.php", line 46, characters 12-13:
No instance method `me` in `Treq` (Typing[4053])
  File "protected_non_static_member_03.php", line 44, characters 19-21:
  Did you mean `foo` instead?
  File "protected_non_static_member_03.php", line 40, characters 7-10:
  This is why I think it is an object of type Treq
  File "protected_non_static_member_03.php", line 40, characters 7-10:
  Declaration of `Treq` is here
